# opencv

./: .gitignore
docker/: Dockerfile.bazel  Dockerfile.face-recognition.arm64  Dockerfile.face-recognition.armhf  Dockerfile.opencv.armhf  Dockerfile.opencv.ubuntu  Dockerfile.py38.ubuntu  Dockerfile.ros2.opencv.pytorch
docker/jetson/: Dockerfile.ros2.opencv.pytorch  Dockerfile.ros2.workspace  build_ros2_pytorch.sh  build_workspace.sh
docker/rock/: Dockerfile.face-recognition.arm64  Dockerfile.face-recognition.ubuntu  Dockerfile.opencv.arm64  Dockerfile.opencv.armhf
face_recognition/: .dockerignore  Dockerfile  Dockerfile.arm64  Dockerfile.armhf  app.py  build_faces.py  detector.py  displayer.py  docker-compose.arm64.yml  docker-compose.armhf.yml  docker-compose.nginx.yml  docker-compose.yml  face_recognition.ipynb  file_watcher.py  home_watcher.py  laptop_watcher.py  log.py  reactor.py  test_img.py  utils.py  uwsgi.ini  video-nginx.conf  watcher.py  webcam.py
joystick/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
jupyter_notebook/: 01_combine_dataset.ipynb  01_pre_process_image.ipynb  01_prepare_dataset.ipynb  01_prepare_dataset__steering.ipynb  01_prepare_dataset__steering_speed.ipynb  02_train_model.ipynb  02_train_nvidia_model__steering.ipynb  02_train_nvidia_model__steering_speed.ipynb  02_train_nvidia_model__steering_speed_DALI.ipynb  03_eval_model.ipynb  I2C_LCD.ipynb  cam_test.ipynb  car_motor.ipynb  data_collector.ipynb  i2c_test.ipynb  jetson_motor.ipynb  note_of_install.ipynb  pico_motor.ipynb  uart_test.ipynb  (+4 more)
(+97 files in other folders)
